--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conferencia",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "ECSLH conference in Lisbon 2019",
   "version": "0.1.0",
   "author": "mash",
   "dependencies": {
